@@ -244,7 +244,9 @@ static jint JNICALL NativeRunAtariProgram(JNIEnv *env, jobject this,
 		CARTRIDGE_MEGAMAX_2048_DESC,
 		CARTRIDGE_THECART_128M_DESC,
 		CARTRIDGE_MEGA_4096_DESC,
-		CARTRIDGE_MEGA_2048_DESC
+		CARTRIDGE_MEGA_2048_DESC,
+		CARTRIDGE_THECART_32M_DESC,
+		CARTRIDGE_THECART_64M_DESC
 	};
 
 	const jbyte *img_utf = NULL;
